<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />
    <ScrollView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="250dp"

                android:src="@drawable/metrobutton2"
                android:id="@+id/metro"
                android:contentDescription="@string/mainheading"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"

                />

            <TextView
                android:layout_width="400dp"
                android:layout_height="116dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/mainheading"
                android:textColor="#651fff"
                android:textSize="40sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading"
                android:textSize="30sp"
                android:textColor="#448aff"
                android:padding="20dp"
                android:id="@+id/heading"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp">
            </TextView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station1"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                >
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/rounded_corner"
                android:padding="10dp"
                android:text="@string/station2">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station3"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station4"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="15dp">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station5"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statin6"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station7"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station8"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station9"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp">
            </Button>
        </LinearLayout>
    </ScrollView>/>
</androidx.constraintlayout.widget.ConstraintLayout>